--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "advancespotify",
-  "version": "1.0.0",
-  "description": "A real-time, full-stack Spotify clone with chat, social activity, playback, admin dashboard, and music management features — built with **React**, **Tailwind CSS**, **ShadCN UI**, **MongoDB**, **Express**, and **Socket.io**.",
-  "main": "index.js",
-  "scripts": {
-    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm start --prefix backend"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rupak1005/AdvanceSpotify.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/rupak1005/AdvanceSpotify/issues"
-  },
-  "homepage": "https://github.com/rupak1005/AdvanceSpotify#readme"
+	"name": "spotify-clone",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+		"start": "npm start --prefix backend"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
