--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"dependencies": {
-		"@clerk/backend": "^2.4.5"
-	}
+	"engines": {
+  "node": "18.x"
+}
 }
