--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@clerk/backend": "^2.4.5",
-		"@clerk/express": "^1.3.4",
+		"@clerk/express": "^1.3.3",
 		"cloudinary": "^2.5.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
@@ -24,6 +23,9 @@
 		"mongoose": "^8.8.0",
 		"node-cron": "^3.0.3",
 		"socket.io": "^4.8.1"
+	},
+	"engines": {
+		"node": ">=20.0.0 <21.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.7"
