--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-		"start": "npm start --prefix backend"
+		"build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
+		"start": "cd backend && npm start"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"engines": {
 		"node": "20.x"
+	},
+	"dependencies": {
+		"@clerk/express": "^1.3.3"
 	}
 }
