--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     region: oregon
-    buildCommand: "npm install"
+    buildCommand: "npm ci"
     startCommand: "npm run start"
     healthCheckPath: "/api/health"
     envVars:
