--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
+		"build": "cd backend && npm ci && cd ../frontend && npm ci && npm run build",
 		"start": "cd backend && npm start"
 	},
 	"keywords": [],
