--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
 		"express-fileupload": "^1.5.1",
 		"mongoose": "^8.8.0",
 		"node-cron": "^3.0.3",
-		"socket.io": "^4.8.1"
+		"socket.io": "^4.8.1",
+		"yt-dlp-exec": "^1.0.2",
+		"ytmusic-api": "^5.3.0"
 	},
 	"engines": {
 		"node": ">=20.0.0 <21.0.0"
